version/0.26/_sources/api/solver/_autosummary/settings/y_disp_boundary_value.rst.txt
:orphan:

.. _y_disp_boundary_value:

y_disp_boundary_value
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.y_disp_boundary_value.y_disp_boundary_value
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_17>`                Specify how the boundary condition will be defined.

:ref:`value <value_13>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

================================   =======================

Parent                                             Summary

================================   =======================
:ref:`structure <structure_1>`         Help not available.

:ref:`porous_jump <porous_jump>`       Help not available.

================================   =======================

