version/0.27/_sources/api/solver/_autosummary/settings/y_disp_boundary_value.rst.txt
:orphan:

.. _y_disp_boundary_value:

y_disp_boundary_value
=====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.y_disp_boundary_value
    :show-inheritance:

.. rubric:: Attributes

==================================   =======================================================

Attribute                                                                            Summary

==================================   =======================================================
:ref:`option <option_31>`                Specify how the boundary condition will be defined.

:ref:`value <value_17>`                             Specify value as constant or expression.

:ref:`profile_name <profile_name>`                          Specify the name of the profile.

:ref:`field_name <field_name>`                                Specify the name of the field.

:ref:`udf <udf>`                              Specify the name of the user-defined function.

==================================   =======================================================

.. rubric:: Included in:

====================================   =============================================================

Parent                                                                                       Summary

====================================   =============================================================
:ref:`structure_1 <structure_1>`             Allows to change structure model variables or settings.

:ref:`porous_jump_1 <porous_jump_1>`       Allows to change porous-jump model variables or settings.

====================================   =============================================================

